style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
}

nav {
    height: 80px;
    display: flex;
}

img {
    width: 100%;
    height: 100%;
    max-height: 50vh;
    padding: 40px;
}

p {
    line-height: 1.5;
}

.purple {
    color: #7342d6;
}

.no__cursor {
    cursor: not-allowed;
}

.nav__container {
    display: flex;
    width: 100%;
    justify-content: space-between;
    max-width: 1200px;
    padding: 0 24px;
    margin: 0 auto;
    align-items: center;
}

.logo {
    display: block;
    width: 160px;
    height: auto;
    padding: 16px !important;
}


ul {
    display: flex;
}

li {
    list-style-type: none;
}

a {
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

html {
    scroll-behavior: smooth;
}

/* NAVIGATION */

.nav__link {
    margin-left: 16px;
    text-decoration: none;
    font-size: 20px;
    font-weight: bold;
    color: #7342d6;
    padding: 8px;
}

.nav__link--primary {
    border: 2px solid #7342d6; 
    border-radius: 2px;
}

.nav__link:hover {
    text-decoration: underline;
}

.nav__link--primary:hover {
    text-decoration: none;
}

/* MOBILE BUTTON */

.button__menu {
    background-color: transparent;
    font-size: 40px;
    text-align: center;
    border: none;
    color: #7342d6;
    display: none;

}

.menu__backdrop {
    position: absolute;
    background-color: #242424;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 100;
    /* display: flex; */
    justify-content: center;
    align-items: center;
    display: none;
}

.menu--open .menu__backdrop {
    display: flex;
}

.menu--open {
    max-height: 100vh;
    overflow-y: hidden;
}

.menu__links {
    display: flex;
    flex-direction: column;
    align-items: center;    
}

.menu__list {
    padding: 32px 0;
}

.menu__link {
    color: white;
    font-size: 40px;
}

.button__menu--close {
    position: absolute; 
    right: 20px;
    top: 10px;
    padding: 8px;
    color: white;
}

/* LANDING */

#landing {
    background-color: rgba(115, 66, 214, 0.1);
}

header {
    height: calc(100vh - 80px);
    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.564);

}

.header__container {
    padding-top: 24px;
    width: 100%;
    max-width: 720px;
    margin: 0 auto; 
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.header__description {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.header__title {
    font-size: 56px;
    color: #7342d6;
    margin-bottom: 24px;
    text-align: center;
}

.header__subtitle {
    text-align: center;
    font-size: 32px;
    margin-bottom: 32px;
}

.button {
    background-color:#7342d6;
    color: white; 
    padding: 12px 24px; 
    font-size: 20px;
    border-radius: 4px;
    border: none;
}

button {
    cursor: pointer;
}

button:active {
    transform: translateY(1px);
}

.header__img--wrapper {
    padding: 20px;
    /* Moving this above any other elements */
    z-index: 10;
}

.container {
    padding: 56px 0;
}

.featured__container {
    padding: 56px 0;
    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.564);
    height: 750px;
}

.row {
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
}

/* HIGHLIGHTS */

.highlight__wrapper {
    display: flex;
}

.highlight {
    padding: 0 24px;
    width: calc(100% / 3);
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.section__title {
    text-align: center;
    padding: 24px 0;
}

.highlight__para {
    text-align: center;
    max-width: 280px;
}

.highlight__img {
    border: 2px solid #7342d65d;
    color: #7342d6;
    width: 100px;
    height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 4px;
    font-size: 32px;
    margin-bottom: 24px;
}

.subtitle {
    font-size: 20px;
    margin-bottom: 20px;
}

/* FEATURES */

#features { 
    height: 750px; 
    background-color: rgba(115, 66, 214, 0.1);
}

.books {
    display: flex;
}

.book {
    width: 25%;
    padding: 24px;
}

.book__img--wrapper {
    margin-bottom: 8px;
    border-radius: 4px;
    overflow: hidden;
    display: flex;
}

.book__img {
    max-height: 380px;
    transition: all 300ms ease;
    cursor: no-drop;
}

.book:hover .book__img {
    transform: scale(1.03);
}

.book__title {
    font-size: 20px;
    margin-bottom: 8px;
    text-align: center;
}

.book__title:hover {
    text-decoration: underline;
    cursor: not-allowed;
}

.book__ratings {
    margin-bottom: 8px;
    color: #fabf2a;
    text-align: center;
}

.book__price {
    text-align: center;
}

.old__price {
    text-decoration: line-through;
    padding-right: 6px;
    color: #bfbfbf;
}

/* LATEST */

#latest {
    min-height: 750px;
    padding-bottom: 80px; /* Extra space for separation */
}


.books {
    display: flex;
    flex-wrap: wrap;
}

.latest__section__title {
    text-align: center;
    padding-top: 48px;
}


/* EXPLORE */

.row__button {
    text-align:center;
}

.explore__container {
    padding: 56px 0;
    background-color: rgba(115, 66, 214, 0.1);
    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.564);
}

.explore__title {
    padding-bottom: 48px;
}

/* FOOTER */

footer {
    background-color: #242424;
}

.footer__logo {
    width: 160px;
    filter: grayscale(1) invert(1);
    display: flex;
}

.footer__img {
    padding: 8px !important;
}

.footer__list {
    margin-bottom: 24px;
}

.footer__copyright {
    color: #fff;
}

.row__footer {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.footer__link {
    padding: 0 8px;
    color: #fff;
}

@media (max-width: 550px) {
    .nav__links {
        display: none;
    }

    .button__menu {
        display: block;
    }
}

